--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<script src="jquery.js"></script>
+	<script src="jogo.js"></script>
+	<link rel="stylesheet" type="text/css" href="css.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">	
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -93,5 +95,47 @@
     	</div></div>
   </div>
  </div>
- </body>
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" id="modalfalha">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+    <div class="modal-content">
+      <div class="modal-header">
+        
+        <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      	<img src="imagens/gameover.png" style="width: 200px;margin-left: auto;margin-right: auto;display: block;padding-bottom: 30px;">
+        <center><h2>Voce falhou, Clickou por mais de 100 vezes!!!!</h2></center>
+      </div>
+      <div class="modal-footer">
+        <center><button type="button" class="btn btn-danger" onclick="location.reload();">Jogar novamente</button></center>
+      </div>
+    </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" id="modalwin">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+    <div class="modal-content">
+      <div class="modal-header">
+        
+        <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      	<img src="imagens/trofeu.jpg" style="width: 200px;margin-left: auto;margin-right: auto;display: block;padding-bottom: 30px;">
+        <center><h2>Voce venceu, Parabens!!!</h2></center>	
+      </div>
+      <div class="modal-footer">
+        <center><button type="button" class="btn btn-danger" onclick="location.reload();">Jogar novamente</button></center>
+      </div>
+    </div>
+    </div>
+  </div>
+</div>
+</body>
 </html>
