--- a/pagina2.html
+++ b/pagina2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8"/>
 	<script src="jquery.js"></script>
 	<script src="fase2.js"></script>
 	<link rel="stylesheet" type="text/css" href="css.css">
